package com.zym.pattern.adapter.object_adapter;

/**
 * @author zhouyumeng
 * @date 2022/01/05
 **/
public class Voltage220V {

    public int output220V() {
        System.out.println("输出电压：220V");
        return 220;
    }

}
