@startuml
'https://plantuml.com/class-diagram

interface Voltage5V{
    output5V(): int
}
class Voltage220V{
    output220V(): int
}
class VoltageAdapter{
    voltage220V: Voltage220V
    VoltageAdapter(voltage220V: Voltage220V)
    output5V(): int
}
class Phone{
    charging(voltage5V: Voltage5V): void
}

Voltage5V <|.. VoltageAdapter
'聚合(通过set注入)
Voltage220V o-- VoltageAdapter
Phone --> Voltage5V


@enduml